bug 11476 and 11523
SVN-Revision: 17834