@@ -704,10 +704,8 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 	 * Setting Consent Response for the collection protocol.
 	 * @param form ParticipantForm.
 	 */
-	private void setConsentsResponseToCollectionProtocolRegistration(ParticipantForm form)
+	private void setConsentsResponseToCollectionProtocolRegistration(ParticipantForm form) throws Exception
 	{
-		try
-		{
 			Collection<ConsentResponseBean> consentResponseBeanCollection =
 				form.getConsentResponseBeanCollection();
 			Iterator itr = this.collectionProtocolRegistrationCollection.iterator();
@@ -717,11 +715,6 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 					(CollectionProtocolRegistration) itr.next();
 				setConsentResponse(collectionProtocolRegistration, consentResponseBeanCollection);
 			}
-		}
-		catch (Exception e)
-		{
-			logger.error(e.getMessage(), e);
-		}
 	}
 
 	/**
@@ -729,69 +722,50 @@ public class Participant extends AbstractDomainObject implements java.io.Seriali
 	 * @param collectionProtocolRegistration CollectionProtocolRegistration.
 	 * @param consentResponseBeanCollection Collection.
 	 */
-	private void setConsentResponse(CollectionProtocolRegistration collectionProtocolRegistration, Collection consentResponseBeanCollection)
+	private void setConsentResponse(CollectionProtocolRegistration collectionProtocolRegistration, Collection consentResponseBeanCollection) throws Exception
 	{
-		try
+		if(consentResponseBeanCollection!= null && !consentResponseBeanCollection.isEmpty())
 		{
-			if (consentResponseBeanCollection == null && consentResponseBeanCollection.isEmpty())
-			{
-				if (collectionProtocolRegistration.getCollectionProtocol() != null)
-				{
-					String cpIDcollectionProtocolRegistration = collectionProtocolRegistration.getCollectionProtocol().getId().toString();
-
-					Collection consentTierCollection = getConsentList(
-							cpIDcollectionProtocolRegistration);
-
-					Collection consentTierResponseCollection =
-						prepareConsentTierResponseCollection(consentTierCollection,
-								false);
-					collectionProtocolRegistration.setConsentTierResponseCollection(
-							consentTierResponseCollection);
-				}
-			}
-			else // Setting default response to collection protocol
-			{
-				Iterator itr = consentResponseBeanCollection.iterator();
-				while (itr.hasNext())
-				{
-					ConsentResponseBean consentResponseBean = (ConsentResponseBean) itr.next();
-					long cpIDcollectionProtocolRegistration = collectionProtocolRegistration.
-						getCollectionProtocol().getId().longValue();
-					long cpIDconsentRegistrationBean = consentResponseBean.
-						getCollectionProtocolID();
-					if (cpIDcollectionProtocolRegistration == cpIDconsentRegistrationBean)
+			Iterator itr = consentResponseBeanCollection.iterator();
+			while(itr.hasNext())
+	        {
+				ConsentResponseBean consentResponseBean = (ConsentResponseBean)itr.next();
+				long cpIDcollectionProtocolRegistration = collectionProtocolRegistration.getCollectionProtocol().getId().longValue();
+				long cpIDconsentRegistrationBean =  consentResponseBean.getCollectionProtocolID();
+				if(cpIDcollectionProtocolRegistration == cpIDconsentRegistrationBean){
+					
+					String signedConsentUrl = consentResponseBean.getSignedConsentUrl();
+					long witnessId = consentResponseBean.getWitnessId();
+					String consentDate = consentResponseBean.getConsentDate();
+					Collection consentTierResponseCollection = prepareConsentTierResponseCollection(consentResponseBean.getConsentResponse(), true);
+					 
+					collectionProtocolRegistration.setSignedConsentDocumentURL(signedConsentUrl);
+					if(witnessId>0)
 					{
-						String signedConsentUrl = consentResponseBean.
-							getSignedConsentUrl();
-						long witnessId = consentResponseBean.getWitnessId();
-						String consentDate = consentResponseBean.getConsentDate();
-						Collection consentTierResponseCollection =
-							prepareConsentTierResponseCollection(consentResponseBean.
-									getConsentResponse(), true);
-						collectionProtocolRegistration.setSignedConsentDocumentURL(
-								signedConsentUrl);
-						if (witnessId > 0)
-						{
-							User consentWitness = new User();
-							consentWitness.setId(Long.valueOf(witnessId));
-							collectionProtocolRegistration.setConsentWitness(
-									consentWitness);
-						}
-						collectionProtocolRegistration.setConsentSignatureDate(
-								Utility.parseDate(consentDate));
-						collectionProtocolRegistration.setConsentTierResponseCollection(
-								consentTierResponseCollection);
-						collectionProtocolRegistration.setConsentWithdrawalOption(
-								consentResponseBean.getConsentWithdrawalOption());
-						break;
+						User consentWitness = new User();
+						consentWitness.setId(new Long(witnessId));
+						collectionProtocolRegistration.setConsentWitness(consentWitness);
 					}
+					
+					collectionProtocolRegistration.setConsentSignatureDate(Utility.parseDate(consentDate));
+					collectionProtocolRegistration.setConsentTierResponseCollection(consentTierResponseCollection);
+					collectionProtocolRegistration.setConsentWithdrawalOption(consentResponseBean.getConsentWithdrawalOption());
+					break;
 				}
+	        }
+		}
+		else // Setting default response to collection protocol
+		{
+			if(collectionProtocolRegistration.getCollectionProtocol()!=null)
+			{
+			String cpIDcollectionProtocolRegistration = collectionProtocolRegistration.getCollectionProtocol().getId().toString();
+			Collection consentTierCollection = getConsentList(cpIDcollectionProtocolRegistration);
+			
+			Collection consentTierResponseCollection = prepareConsentTierResponseCollection(consentTierCollection,false);
+			collectionProtocolRegistration.setConsentTierResponseCollection(consentTierResponseCollection);
 			}
 		}
-		catch (Exception e)
-		{
-			logger.error(e.getMessage(), e);
-		}
+
 	}
 
 	/**
